--- a/projectfront/src/component/footer/footer.css
+++ b/projectfront/src/component/footer/footer.css
@@ -109,7 +109,7 @@
     border-radius: 50%;
     transition: 0.2s;
     font-size: 1.7rem;
-    color: var(--white);
+    color: var(--white-color);
     box-shadow: 0px 0px 0px 0px var(--primary-color);
   }
   .subscribe .socials a:hover {
