--- a/projectfront/src/component/hero/hero.css
+++ b/projectfront/src/component/hero/hero.css
@@ -1,7 +1,6 @@
 .hero .text{
     display: flex;
     flex-direction: column;
-    gap:.6rem;
     width: 50%;
 }
 .hero .text .collection{
@@ -10,23 +9,22 @@
     padding: .5rem;
     color: var(--primary-color);
     text-align: center;
-    font-weight: 600;
-    width: 15rem;
+    font-weight: 500;
+    width: 12rem;
 }
 .hero .text h1{
     border-radius: 1rem;
     padding: .5rem;
-    margin-block: 1rem;
+    margin-block: .3rem;
     color: var(--header-color);
-    line-height: 3.4rem;
+    line-height: 2.8rem;
     font-weight: 700;
-    font-size: 3rem;  
+    font-size: 2.5rem;  
 }
 .hero .text p{
-
     color: var(--text-color);
     line-height: 1.4rem;
-    font-weight: 400;
+    font-weight: 300;
     font-size: .86rem;  
 }
 .hero{
@@ -76,11 +74,12 @@
 }
 .featured span i{
     color: var(--primary-color);
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
 .featured span p{
     color: var(--header-color) !important;
     font-weight: 500 !important;
+    font-size: .9rem !important;
 }
 .hero .image{
     position: relative;
@@ -93,7 +92,8 @@
  position: absolute;
 }
 .networking-opportunities,
-.application-tracking
+.application-tracking,
+.company-reviews
 {
     width: 9rem;
     display: flex;
@@ -105,47 +105,34 @@
     padding: .5rem;
 }
 .company-reviews{
-    top: 3rem;
-    right: 2rem;
-    border-radius: 50%;
-    width: 5.8rem;
-    height: 6.6rem;
-    text-wrap: wrap;
-    text-align: center;
-    background: var(--primary-color);
-    color: var(--white-color);
-    padding: .2rem;
+    top: 6rem;
+    right: 0rem;
+
 }
+
+
+.networking-opportunities p,
+.application-tracking p,
 .company-reviews p{
-    font-size: .96rem;
+    color: var(--pure-black);
+    font-size: .8rem;
     font-weight: 500;
     line-height: 1.1rem;
 }
-.company-reviews i{
-    font-weight: 700;
-    font-size: 1.5rem;
-    color: var(--hover-color)
-}
-.networking-opportunities p,
-.application-tracking p{
-    color: var(--pure-black);
-    font-size: .88rem;
-    font-weight: 500;
-    line-height: 1.2rem;
-}
 .networking-opportunities i,
-.application-tracking i{
+.application-tracking i,
+.company-reviews i{
    color: var(--primary-color);
    font-size: 1.4rem;
    margin-right: .8rem;
 }
 .networking-opportunities{
-    top: 4rem;
-    left: 0rem;
+    top: 0rem;
+    left: 6rem;
 }
 .application-tracking{
-    bottom: 0rem;
-    right: 0rem;
+    bottom: 2rem;
+    right: 1rem;
 }
 .hero .image img{
     width: 120%;
