--- a/projectfront/src/component/nav/nav.css
+++ b/projectfront/src/component/nav/nav.css
@@ -13,7 +13,7 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid var(--text-color);
+  border-bottom: 1px solid var(--gray);
   padding-block: 1rem;
 }
  .logo {
@@ -53,7 +53,7 @@
   width: 70%;
   border: 0;
   outline: 0;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 100;
   text-transform: capitalize;
   color: var(--text-color);
@@ -118,7 +118,7 @@
     font-size: 1rem;
     font-weight: 400;
     text-align: center;
-    border-bottom: 1px solid var(--text-color);
+    border-bottom: 1px solid var(--gray);
 }
 .navlower a{
     color: var(--text-color);
