--- a/projectfront/src/index.css
+++ b/projectfront/src/index.css
@@ -3,6 +3,7 @@
 *{
   padding: 0px;
   outline: 0;
+  list-style: none;
   text-decoration: none;
   margin: 0px;
   box-sizing: border-box;
@@ -15,12 +16,15 @@
    --header-color: rgb(39, 39, 39);
    --pure-black:rgb(15, 15, 15);
    --white-color: rgb(255, 255, 255);
+   --blur-white: rgba(255, 255, 255,.6);
    --hover-color: rgb(190, 192, 219);
    --gray: rgb(218, 216, 216);
    --light-gray:rgb(206, 205, 205);
    --dark-blue: rgb(12, 12, 100);
+   --blur-primary:rgba(6, 6, 207, 0.7);
    --gold:rgb(255, 217, 0);
-   --box-shadow: 0px 0px 6px 1px rgba(10,10,100,.2)
+   --box-shadow: 0px 0px 6px 1px rgba(10,10,100,.2);
+   --white-shadow: 0px 0px 6px 1px rgba(200,200,200,.8)
 }
 body{
   background-color: var(--background-color);
