--- a/projectfront/src/component/features/features.css
+++ b/projectfront/src/component/features/features.css
@@ -12,6 +12,7 @@
     width: 22rem;
     text-align: center;
     transition: .3s linear;
+    opacity: 0;
 }
 .feature:hover{
     transform: translateY(-5px);
@@ -32,4 +33,7 @@
     color: var(--text-color);
     line-height: 1.45rem;
     font-size: .9rem;
+}
+.feature.anime.animation {
+    animation: riseup 1s .2s forwards;
 }
