--- a/projectfront/src/component/hero/hero.css
+++ b/projectfront/src/component/hero/hero.css
@@ -1,48 +1,51 @@
-.hero .text{
-    display: flex;
-    flex-direction: column;
-    width: 50%;
+.hero .text {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
-.hero .text .collection{
-    background: var(--hover-color);
-    border-radius: 1rem;
-    padding: .5rem;
-    color: var(--primary-color);
-    text-align: center;
-    font-weight: 500;
-    width: 12rem;
+.hero .text .collection {
+  background: var(--hover-color);
+  border-radius: 1rem;
+  padding: 0.5rem;
+  color: var(--primary-color);
+  text-align: center;
+  font-weight: 500;
+  width: 12rem;
+  opacity: 0;
 }
-.hero .text h1{
-    border-radius: 1rem;
-    padding: .5rem;
-    margin-block: .3rem;
-    color: var(--header-color);
-    line-height: 2.8rem;
-    font-weight: 700;
-    font-size: 2.5rem;  
+.hero .text h1 {
+  border-radius: 1rem;
+  padding: 0.5rem;
+  margin-block: 0.3rem;
+  color: var(--header-color);
+  line-height: 2.8rem;
+  font-weight: 700;
+  font-size: 2.5rem;
+  opacity: 0;
 }
-.hero .text p{
-    color: var(--text-color);
-    line-height: 1.4rem;
-    font-weight: 300;
-    font-size: .86rem;  
+.hero .text .intro {
+  color: var(--text-color);
+  line-height: 1.4rem;
+  font-weight: 300;
+  font-size: 0.86rem;
+  opacity: 0;
 }
-.hero{
-    margin-top: 8.4rem;
-    gap:2rem;
-    margin-bottom: 8rem;
+.hero {
+  margin-top: 6.4rem;
+  gap: 2rem;
+  margin-bottom: 8rem;
 }
 
-.buttons{
-    display: flex;
-    gap:1rem;
-    margin-top: 1rem;
+.buttons {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+  opacity: 0;
 }
-.btn
-{
+.btn {
   width: 10rem;
   height: 3rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   box-shadow: var(--box-shadow);
   background: var(--primary-color);
   color: var(--white-color);
@@ -51,90 +54,183 @@
   outline: 0;
   cursor: pointer;
   font-weight: 700;
-  transition: .2s linear;
+  transition: 0.2s linear;
 }
 .btn:hover,
-.btn_light{
-    color: var(--primary-color);
-    background: var(--white-color);
+.btn_light {
+  color: var(--primary-color);
+  background: var(--white-color);
 }
-.btn_light:hover{
-    color: var(--white-color);
-    background: var(--primary-color);
+.btn_light:hover {
+  color: var(--white-color);
+  background: var(--primary-color);
 }
-.featured{
-    display: flex;
-    gap: 1.6rem;
-    margin-top: 2rem;
+.featured {
+  display: flex;
+  gap: 1.6rem;
+  margin-top: 2rem;
 }
-.featured span{
-    display: flex;
-    align-items: flex-end;
-    gap: 0.6rem;
+.featured span {
+  display: flex;
+  align-items: flex-end;
+  gap: 0.6rem;
+  opacity: 0;
 }
-.featured span i{
-    color: var(--primary-color);
-    font-size: 1.2rem;
+.featured span i {
+  color: var(--primary-color);
+  font-size: 1.2rem;
 }
-.featured span p{
-    color: var(--header-color) !important;
-    font-weight: 500 !important;
-    font-size: .9rem !important;
+.featured span.anime p {
+  color: var(--header-color) !important;
+  font-weight: 500 !important;
+  font-size: 0.9rem !important;
 }
-.hero .image{
-    position: relative;
-    width: 40%;
+.hero .image {
+  position: relative;
+  width: 40%;
 }
 .networking-opportunities,
 .company-reviews,
-.application-tracking
-{
- position: absolute;
+.application-tracking {
+  position: absolute;
 }
 .networking-opportunities,
 .application-tracking,
-.company-reviews
-{
-    width: 9rem;
-    display: flex;
-    background: var(--white-color);
-    align-items: center;
-    gap: 0rem;
-    border-radius: 1rem;
-    box-shadow: var(--box-shadow);
-    padding: .5rem;
+.company-reviews {
+  width: 9rem;
+  display: flex;
+  background: var(--white-color);
+  align-items: center;
+  gap: 0rem;
+  border-radius: 1rem;
+  box-shadow: var(--box-shadow);
+  padding: 0.5rem;
+  opacity: 0;
 }
-.company-reviews{
-    top: 6rem;
-    right: 0rem;
-
+.company-reviews {
+  top: 6rem;
+  right: 0rem;
 }
-
 
 .networking-opportunities p,
 .application-tracking p,
-.company-reviews p{
-    color: var(--pure-black);
-    font-size: .8rem;
-    font-weight: 500;
-    line-height: 1.1rem;
+.company-reviews p {
+  color: var(--pure-black);
+  font-size: 0.8rem;
+  font-weight: 500;
+  line-height: 1.1rem;
 }
 .networking-opportunities i,
 .application-tracking i,
-.company-reviews i{
-   color: var(--primary-color);
-   font-size: 1.4rem;
-   margin-right: .8rem;
+.company-reviews i {
+  color: var(--primary-color);
+  font-size: 1.4rem;
+  margin-right: 0.8rem;
 }
-.networking-opportunities{
-    top: 0rem;
-    left: 6rem;
+.networking-opportunities {
+  top: 0rem;
+  left: 6rem;
 }
-.application-tracking{
-    bottom: 2rem;
-    right: 1rem;
+.application-tracking {
+  bottom: 2rem;
+  right: 1rem;
 }
-.hero .image img{
-    width: 120%;
-    margin-left: -4rem;
+.hero .image img {
+  width: 120%;
+  margin-left: -4rem;
+  opacity: 0;
+}
+.collection.anime.animation {
+  animation: comeFromTop 1.5s 0.2s forwards;
+}
+.hero .text h1.anime.animation {
+  animation: comeFromLeft 2s 1.6s forwards;
+}
+.hero .text .intro.anime.animation {
+  animation: comeFromRight 2.5s 3s forwards;
+}
+.hero .text .buttons.anime.animation {
+  animation: riseup 2s 4.4s forwards;
+}
+.hero .text .featured span.anime.animation {
+  animation: comeFromLeft 2.6s 5.4s forwards;
+}
+.hero .image img.anime.animation {
+  animation: comeFromRight 2.6s 5.4s forwards;
+}
+.hero .image .networking-opportunities.anime.animation {
+  animation: comeFromLeft 1.6s 4.4s forwards;
+}
+.hero .image .company-reviews.anime.animation {
+  animation: comeFromLeft 1.92s 5.9s forwards;
+}
+.hero .image .application-tracking.anime.animation{
+     animation: bounce 2s 6.6 forwards;
+}
+@keyframes comeFromLeft {
+  0% {
+    transform: translateX(-20%);
+    opacity: 0;
   }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+@keyframes comeFromTop {
+  0% {
+    transform: translateY(40%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+@keyframes comeFromRight {
+  0% {
+    transform: translateX(20%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+@keyframes riseup {
+  0% {
+    transform: translateY(70px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+@keyframes bounce {
+  0% {
+    transform: translateY(-50%);
+    opacity: 0;
+  }
+  25% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  45% {
+    transform: translateY(-15%);
+    opacity: 1;
+  }
+  60% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  80% {
+    transform: translateY(-8%);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
